--- a/report/Framework.tex
+++ b/report/Framework.tex
@@ -1,4 +1,4 @@
-\section{FIXME The Framework OR Implementation? }
+\section{Implementation o ALTRO NOME? FIXME }
 \label{sec:TheFramework}
 \textbf{FIXME forse rimuovere la sezione e mettere queste info da qualche altra parte, tipo alla fine della Detailed Architecture Section?} \\
 This section briefly presents the technologies and the tools we use for our transformation. Moreover, it describes some specific solutions we applied to overcome some of the arisen during the implementation.
